# regional_dd_WM

./: .gitignore  main.py  pyproject.toml  test.py
reports/files/: CLIMATEX_VAR_LIST.csv  CLIMATEX_VAR_LIST.xlsx  WRFOUT_VAR_DESCR.csv  WRFUVIC_VAR_DESCR.xlsx  ~$CLIMATEX_VAR_LIST.xlsx
sandbox/: climatEx_exploration.ipynb  inference_aifs-single-v1.ipynb  inference_aifs_single-v1.py  inference_aifs_single-v1.run  slurm_test.py  slurm_test.run  slurm_test.txt
